Changes for 3.4.6rc1

New features:

Bug fixes:
..F....... [ZBX-13119] removed 'empty' button in trigger selection window for map constructor item modal form (gcalenko, Ivo)
........S. [ZBX-12661] fixed Low-level discovery of dependent items not working after being edited and resulting in undefined offset error or foreign key constraint violation (vso)
...G...... [ZBX-13254] fixed 'skip' parameter behaviour for log[], log.count[], logrt[], logrt.count[] items in case log files initially do not exist (Andris)
...G...... [ZBX-13253] fixed losing the 1st record by log[] and logrt[] items if 'skip' parameter is used and log file initially is empty (Andris)
........S. [ZBX-13275] fixed slow housekeeping of events on MySQL (vso)
.......PS. [ZBX-13245] fixed IP fragmentation handling in Zabbix server response to Zabbix proxy (vso)
....I..... [ZBX-13031] fixed Java gateway compilation without libpcre (Sergejs)
A......... [ZBX-12991] removed default values for "active_since" and "active_till" fields in maintenance.create API method (Ivo)
..F....... [ZBX-13270] fixed default selection of the required host permissions radio in the global gcripts form (sasha)
.......PS. [ZBX-12758] fixed slow housekeeping of events due to missing index on foreign key (vso)
..F....... [ZBX-11305] fixed color and label for event status on event details page (gcalenko)
..F.....S. [ZBX-13238] fixed spelling of Elasticsearch (abs, vjaceslavs)
........S. [ZBX-13241] fixed memory leak on Zabbix server when executing remote commands through proxy (vso)
.......PS. [ZBX-13178] fixed ipc_path value in error message (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.4.5

3.4.5rc3 was released as 3.4.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.5rc3

Bug fixes:
.......PS. [ZBX-13225] fixed compilation problem with old curl version for Elasticsearch support (abs, wiper)