@@ -3,6 +3,7 @@ Changes for 3.4.6rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12389] fixed latest data host group filter (Oleg)
 ..F....... [ZBX-13119] removed 'empty' button in trigger selection window for map constructor item modal form (gcalenko, Ivo)
 ........S. [ZBX-12661] fixed Low-level discovery of dependent items not working after being edited and resulting in undefined offset error or foreign key constraint violation (vso)
 ...G...... [ZBX-13254] fixed 'skip' parameter behaviour for log[], log.count[], logrt[], logrt.count[] items in case log files initially do not exist (Andris)
